# PetriNet

./: CMakeLists.txt  README.md
include/: Historique.h  Marquage.h  Matrice.h  Reseau.h  Validation.h
src/: Historique.cpp  Marquage.cpp  Matrice.cpp  Reseau.cpp  Validation.cpp  main.cpp
